<resources>
    <string name="app_name">Lab 6</string>
    <string name="helloMessage">Hello World!</string>
    <string name="buttonMessage">Function List</string>
    <string name="chatButtonMessage">Start Chat</string>
    <string name="loginLabel">Login</string>
    <string name="loginNameInput">Login Name</string>
    <string name="passwordLabel">Password</string>
    <string name="loginButtonMessage">Login</string>
    <string name="radioButton">Radio Button</string>
    <string name="checkBox">Check Box</string>
    <string name="switchMessage">What does this do?</string>
    <string name="description1">Image Camera</string>
    <string name="description2">Image incoming</string>
    <string name="description3">Image outgoing</string>
    <string name="radioOnMessage">Switch is on</string>
    <string name="radioOffMessage">Switch is off</string>
    <string name="startActivityToast">ListItemsActivity passed: My information to share</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Exit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="chatSendButton">Send</string>
    <string name="weatherButtonMessage">Weather Forecast</string>string>

</resources>
