<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidlabs.StartActivity">

    <TextView
        android:id="@+id/helloMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helloMessage"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/listButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonMessage"
        android:layout_below="@+id/helloMessage"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/chatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chatButtonMessage"
        android:layout_below="@+id/listButton"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/weatherButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weatherButtonMessage"
        android:layout_below="@+id/chatButton"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
